--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,14 @@ main {
   transform: translate(45%, -55%);
 }
 
+.desktop__illustration {
+  display: none;
+}
+
+.box__illustration {
+  display: none;
+}
+
 h1 {
   text-align: center;
   margin-top: 30px;
@@ -78,10 +86,6 @@ dt {
   cursor: pointer;
   border-bottom: solid 1px var(--light-grayish-blue);
 }
-
-/* dt:hover {
-  color: var(--soft-red);
-} */
 
 dt::after {
   content: url("/images/icon-arrow-down.svg");
@@ -113,10 +117,68 @@ dd.active {
   color: white;
   position: absolute;
   bottom: 0;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .attribution a {
   text-decoration: none;
   color: var(--very-dark-desaturated-blue);
+}
+
+@media screen and (min-width: 1023px) {
+  main {
+    width: 85%;
+    height: 600px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    max-width: 1200px;
+    /* overflow: hidden; */
+  }
+
+  .image__section {
+    width: 50%;
+    height: 100%;
+    background: url("/images/bg-pattern-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position-x: -570px;
+    background-position-y: -200px;
+  }
+
+  .mobile__illustration {
+    display: none;
+  }
+
+  .desktop__illustration {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translate(-17%, -50%);
+  }
+
+  .content__section {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  h1 {
+    width: 85%;
+    text-align: left;
+  }
+
+  dt:hover {
+    color: var(--soft-red);
+  }
+
+  .box__illustration {
+    display: block;
+    position: absolute;
+    top: 42%;
+    left: 0;
+    transform: translate(-50%, 0);
+  }
 }
